# agent-deployment-readiness-lab

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  run_demo.py
docs/: architecture.md  demo-script.md  limitations.md  public-proof.md  runtime-evidence.md
examples/inbox/onboarding/: complete_request.json  missing_fields_request.json
examples/sample_briefs/: executive_support.txt  onboarding_ops.txt  support_handoff.txt
examples/sample_outputs/: executive_support_plan.md  onboarding_plan.md
examples/schemas/: onboarding_required_fields.json
src/agent_deployment_readiness_lab/: __init__.py  cli.py  config.py  demo_mode.py  graph.py  intake_adapter.py  nodes.py  prompts.py  schemas.py  state.py
tests/: eval_cases.jsonl  run_eval.py  test_cli.py  test_demo_mode.py  test_graph_smoke.py  test_intake_adapter.py  test_nodes.py  test_request_flow.py
